$Id$

            [- Version 2.1.2 -]
2005-12-25: Merge chunk-based YTools into main line!
            
            [- Version 2.0.61 -]
2005-12-24: Allow '+' or '-' as responses to question about whether a
            file should be loaded after being compiled.  Fix paren
            error in 'track-extra-vals' (multilet.lisp).  To make
            "fcompl -f" work correctly for ytools module, added every
            component of the module to the definition in module.lisp.

            [- Version 2.0.59 2005/12/23 05:59:18 airfoyle Exp]
2005-12-22: Made 'fcompl' work with modules --- sort of.

2005-12-21: Fixed bug in 'read-y-or-n' (outin.lisp) where output was
            going to standard output instead of 'srm'. 
            
2005-12-17: Corrected anachronisms in slurp.lisp (use of != and *-*).

            [- Version 2.0.57 2005/12/17 15:49:41 airfoyle Exp -]
2005-12-15: Rewrite of 'track-extra-vals/extra-vals' for greater
            flexibility, adding keyword args :num-principal-values,
            :after; and allowing 'vars' in 'extra-vals' to be omitted
            in simple cases.  Manual and implementation now agree.

            [- Version 2.0.56 2005/12/14 20:30:42 airfoyle Exp]
2005-12-14: Altered 'cons-funcall' to allow (lambda ...) as well as
            (\\ ...).  Changed name of 'mapeltreduce' to 'mapreduce',
            and made it macroexpand to 'reduce' in the usual case.

            [- Version 2.0.55 2005/12/14 15:21:38 airfoyle Exp -]
2005-12-13: Made 'track-extra-vals' more complex for no real reason.

            [- Version 2.0.54 2005/12/12 16:27:42 airfoyle Exp]
2005-12-09: Changed def-class so that a "key-conser" is always
            defined, even if the option :nokey was given.  That option
            was undocumented, and has now been emasculated, that is,
            made equivalent to the absence of :key.

            [- Version 2.0.50 Id: 1.31.2.50 2005/12/08 17:03:04 airfoyle Exp -]